--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>[YOUR NAME]</title>
+    <title>Veronica Hottenroth Professional Portfolio</title>
+    <meta
+      name="Veronica Hottenroth Professional Portfolio"
+      content="Professional website for Veronica Hottenroth"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -21,7 +25,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">[YOUR NAME]</a>
+        <a class="navbar-brand" href="index.html">Veronica Hottenroth</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -36,31 +40,46 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="index.html"
+                title="Homepage link"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About me</a>
+              <a class="nav-link" href="about.html" title="About me link"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a
+                class="nav-link"
+                href="about.html#contact"
+                title="Contact me link"
+                >Contact me</a
+              >
             </li>
           </ul>
         </div>
       </div>
     </nav>
     <h2 class="text-center">👋 Hi I am</h2>
-    <h1 class="text-center">[YOUR NAME]</h1>
-    <h3 class="text-center">Front-end developer, based in [YOUR LOCATION]</h3>
+    <h1 class="text-center">Veronica Hottenroth</h1>
+    <h3 class="text-center">Front-end developer, based in Austin, Texas</h3>
     <div class="navigation-links mb-5">
-      <a href="about.html#contact" class="primary-link">Contact me</a>
-      <a href="about.html" class="secondary-link">About me</a>
+      <a href="about.html#contact" class="primary-link" title="Contact me link"
+        >Contact me</a
+      >
+      <a href="about.html" class="secondary-link" title="About me link"
+        >About me</a
+      >
     </div>
     <div class="container">
       <div class="row">
         <div class="col-6">
-          <img src="images/yoga.png" class="img-fluid rounded" />
+          <img src="images/yoga.png" class="img-fluid rounded" alt="Yoga app" />
         </div>
         <div class="col-6">
           <h2 class="mb-3">Yoga app</h2>
@@ -71,7 +90,9 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Yoga App</a>
+            <a href="#" class="primary-link" title="Yoga app link"
+              >Launch Yoga App</a
+            >
           </div>
         </div>
       </div>
@@ -85,16 +106,26 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Weather App</a>
+            <a href="#" class="primary-link" title="Weather app link"
+              >Launch Weather App</a
+            >
           </div>
         </div>
         <div class="col-6">
-          <img src="images/weather.png" class="img-fluid rounded" />
+          <img
+            src="images/weather.png"
+            class="img-fluid rounded"
+            alt="Weather app"
+          />
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-6">
-          <img src="images/yogurt.png" class="img-fluid rounded" />
+          <img
+            src="images/yogurt.png"
+            class="img-fluid rounded"
+            alt="Yogurt app"
+          />
         </div>
         <div class="col-6">
           <h2 class="mb-3">Yogurt app</h2>
@@ -105,7 +136,9 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Weather App</a>
+            <a href="#" class="primary-link" alt="Yogur app link"
+              >Launch Yogurt App</a
+            >
           </div>
         </div>
       </div>
