--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-      <div class="container">
+      <div class="container-fluid">
         <a class="navbar-brand" href="index.html">Veronica Hottenroth</a>
         <button
           class="navbar-toggler"
