--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
           />
         </div>
       </div>
-      <div class="row mt-5">
+      <div class="row mt-5 mb-5">
         <div class="col-6">
           <img
             src="images/yogurt.png"
-            class="img-fluid rounded"
+            class="img-fluid rounded yogurt-pic"
             alt="Yogurt app"
           />
         </div>
@@ -135,8 +135,8 @@
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-          <div class="mt-5">
-            <a href="#" class="primary-link" alt="Yogur app link"
+          <div class="mt-5 mb-3">
+            <a href="#" class="primary-link" alt="Yogurt app link"
               >Launch Yogurt App</a
             >
           </div>
